--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 
 Assignment/nbproject/private/private.properties
+Assignment/nbproject/private/private.properties
+Assignment/nbproject/private/private.xml
