--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Assignment/nbproject/private/private.properties
 Assignment/nbproject/private/private.properties
 Assignment/nbproject/private/private.xml
 Assignment/build/classes/assignment/Assignment.class
+*.class
