--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 Assignment/nbproject/private/private.properties
 Assignment/nbproject/private/private.properties
 Assignment/nbproject/private/private.xml
+*.xml
